--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   badges: ^3.1.2
+  sqflite: ^2.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
