--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
   assets:
     - assets/images/
     - assets/json/
+    - assets/images/product/
+    - assets/images/system/
+    - assets/images/user/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
